update task for frontend
