# backend/build/swagger.json
@@ -28,8 +28,56 @@
 					"title",
 					"id"
 				],
-				"type": "object",
-				"description": "Model Todo"
+				"type": "object"
+			},
+			"Task": {
+				"properties": {
+					"completed": {
+						"type": "boolean"
+					},
+					"note": {
+						"type": "string",
+						"nullable": true
+					},
+					"title": {
+						"type": "string"
+					},
+					"todoId": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"completed",
+					"note",
+					"title",
+					"todoId",
+					"id"
+				],
+				"type": "object"
+			},
+			"TodoAndTask": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/Todo"
+					},
+					{
+						"properties": {
+							"tasks": {
+								"items": {
+									"$ref": "#/components/schemas/Task"
+								},
+								"type": "array"
+							}
+						},
+						"required": [
+							"tasks"
+						],
+						"type": "object"
+					}
+				]
 			},
 			"TodoPostParams": {
 				"properties": {
@@ -58,7 +106,19 @@
 				"description": "Make all properties in T optional"
 			},
 			"TodoPutParams": {
-				"$ref": "#/components/schemas/Partial_TodoPostParams_"
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/Partial_TodoPostParams_"
+					},
+					{
+						"properties": {
+							"completed": {
+								"type": "boolean"
+							}
+						},
+						"type": "object"
+					}
+				]
 			},
 			"Pick_AddTaskParams.Exclude_keyofAddTaskParams.todoId__": {
 				"properties": {
@@ -81,6 +141,28 @@
 			},
 			"TaskPostParams": {
 				"$ref": "#/components/schemas/Omit_AddTaskParams.todoId_"
+			},
+			"Pick_UpdateTaskParams.Exclude_keyofUpdateTaskParams.id__": {
+				"properties": {
+					"title": {
+						"type": "string"
+					},
+					"note": {
+						"type": "string"
+					},
+					"completed": {
+						"type": "boolean"
+					}
+				},
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_UpdateTaskParams.id_": {
+				"$ref": "#/components/schemas/Pick_UpdateTaskParams.Exclude_keyofUpdateTaskParams.id__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"TaskPutParams": {
+				"$ref": "#/components/schemas/Omit_UpdateTaskParams.id_"
 			},
 			"User": {
 				"properties": {
@@ -138,7 +220,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/Todo"
+										"$ref": "#/components/schemas/TodoAndTask"
 									},
 									"type": "array"
 								}
@@ -302,6 +384,80 @@
 						}
 					}
 				}
+			}
+		},
+		"/todo/task/{taskId}": {
+			"put": {
+				"operationId": "UpdateTask",
+				"responses": {
+					"200": {
+						"description": "更新したタスク",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Todo"
+								}
+							}
+						}
+					}
+				},
+				"description": "タスクの更新",
+				"summary": "タスクを更新する",
+				"tags": [
+					"Todo"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "taskId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/TaskPutParams"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteTask",
+				"responses": {
+					"200": {
+						"description": "更新したタスク",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Todo"
+								}
+							}
+						}
+					}
+				},
+				"description": "タスクの削除",
+				"summary": "タスクを削除する",
+				"tags": [
+					"Todo"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "taskId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/users": {
